# lander_control

./: PlanTrace  README.en.md  README.md  ROSPlanTrace  RobotParam
fdilink_ahrs/launch/: AllImus_driver.launch  LegImu0_driver.launch  LegImu1_driver.launch  LegImu2_driver.launch  LegImu3_driver.launch  TorsoImu_driver.launch  ahrs_driver.launch
imu/: README.md
imu/src/: ahrs_driver.cpp
lander/: CMakeLists.txt  kaanh.xml  package.xml
lander/include/: ControlCMD.h  ControlPlan.h  ControlRTPlan.h  CubicSpline.cpp  CubicSpline.h  CubicSplineNoDynamic.cpp  CubicSplineNoDynamic.h  GetPosIK.cpp  GetPosIK.h  Param.h  Spline.cpp  TransMechPositionIK.hpp  WalkLegExeLegIk.cpp  WalkLegExeLegIk.h  general.hpp  main.cpp  modbus_tcp_slave.hpp  param.h  robotLander.h
lander/msg/: gait_plan_msgs.msg
lander/scripts/: RTrun.sh  Sub_StateData.py  client.cpp  muti_receiver.py  readme.txt  test_client.py  test_server.py
lander/src/: ControlCMD.cpp  ControlPlan.cpp  ControlRTPlan  ControlRTPlan.cpp  Test_joint_pub.cpp  lander.cpp  lander_RTplan  lander_RTplan.cpp  lander_cmd.cpp  lander_plan.cpp  robotLander.cpp  test.cpp  test_mul_threads.cpp
lander/srv/: gait_feedback_msgs.srv  mv_msgs.srv
log/: lander_plan--2022-09-25--11-04-47--log_0.txt
robot/: Elmo ECAT 00010420 V10.xml  JMC_DRIVE_V1.7.xml
robot/robot/: CMakeLists.txt
robot/robot/include/: CubicSplineNoDynamic.cpp  Spline.h  TransMechPositionIK.cpp  TransMechPositionIK.h  WalkLegExeLegIk.hpp
robot/robot/src/: control_server.cpp  control_server.h  kaanh.xml  main.cpp  robot.cpp  robot.h
(+826 files in other folders)
